--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,7 @@ $xxl: $extra-extra-large;
 $black-color: #333333;
 $black-light-color: #CCCCCC;
 $white-color: #F2F2F2;
+$red-color: #DC143C;
 
 //Spacing
 $spacing: 8px;
