adding loading and buttons

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -14,7 +14,7 @@
 
 .modal {
   width: auto;
-  background: white;
+  background: $backgound-color;
   height: auto;
   border-radius: 15px;
   padding: 15px;
