--- a/src/components/ExerciseForm/ExerciseForm.module.scss
+++ b/src/components/ExerciseForm/ExerciseForm.module.scss
@@ -1,78 +1,60 @@
+@import 'mixins';
+
+.title {
+  @include padding();
+  text-align: center;
+}
+
 .form {
+  @include gap();
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 400px;
 }
 
-.inputField {
-  margin-bottom: 1rem;
+.mediaList {
+  @include gap();
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid $black-light-color;
+  padding: 1rem;
+}
+
+.mediaItem {
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+}
+
+.mediaInput {
+  // width: 100%;
+  // grid-row: 5fr;
+  // grid-area: input;
+}
+
+.mediaError {
+  grid-column: 1 / -1;
+}
+
+.mediaBtnContainer {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
-.input {
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  flex-grow: 1;
-  margin-right: 0.5rem;
+button.removeBtn {
+  @include iconBtn($red-color);
 }
 
-.button, .addBtn, .removeBtn {
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0.25rem;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.button {
-  background-color: #007bff;
-
-  &:disabled {
-    background-color: #ccc;
-  }
-
-  &.loading {
-    background-color: #ccc;
-  }
-}
-
-.addBtn {
-  background-color: #28a745;
-
-  &:hover {
-    background-color: #218838;
-  }
-}
-
-.removeBtn {
-  background-color: #dc3545;
-
-  &:hover {
-    background-color: #c82333;
-  }
+button.addBtn {
+  @include iconBtn($green-color);
 }
 
 .error {
-  color: #dc3545;
+  color: $alert-color;
 }
 
-.loading {
-  background: lightgray;
-  cursor: not-allowed;
-  animation: pulse 2s infinite;
-}
-
-@keyframes pulse {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.4;
-  }
-  100% {
-    opacity: 1;
-  }
+.submitBtn {
+  min-width: 80px;
 }
