--- a/src/components/FormFields/TextArea/TextArea.module.scss
+++ b/src/components/FormFields/TextArea/TextArea.module.scss
@@ -1,16 +1,10 @@
-.inputField {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-}
+@import 'mixins';
 
-.input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  color: #333;
-  width: 100%;
-  box-shadow: inset 0 -2px 1px rgba(0,0,0,.03);
+.inputField {
+  @include inputField();
+  height: 120px;
+
+  textarea {
+    resize: none;
+  }
 }
