--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -51,3 +51,42 @@
     @include gap();
   }
 }
+
+@mixin inputField() {
+  background-color: $textfield-background-color;
+  border-radius: 5px;
+  border: 1px solid $black-light-color;
+  box-shadow: inset 0 -2px 1px rgba(0,0,0,.03);
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding: 10px;
+  width: 100%;
+
+  input, textArea {
+    background-color: $textfield-background-color;
+    border: none;
+    color: $black-color;
+    outline: none;
+    width: inherit;
+  }
+}
+
+@mixin iconBtn($color: $black-color) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 4px; 
+  border: none;
+  border-radius: 50%;
+  background-color: $white-color;
+  color: $color;
+  cursor: pointer;
+  transition: background-color .5s ease;
+  font-size: 20px;
+
+  &:hover {
+    background-color: $color;
+    color: $white-color;
+  }
+}
