modify close icon button modal

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -31,13 +31,9 @@
   }
 }
 
-.closeBtn {
+button.closeBtn {
   margin: auto 0 10px auto;
-  display: block;
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-  color: $red-color;
+  @include iconBtn($red-color);
 }
 
 .open {
