--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -90,3 +90,10 @@
     color: $white-color;
   }
 }
+
+@mixin truncate-lines($lines) {
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
