--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,9 +14,10 @@
 */
 html,
 body {
-  height: 100%;
+  min-height: 100vh;;
 }
 
 body {
   background-color: $backgound-color;
+  position: relative;
 }
