--- a/src/components/ExerciseCard/ExerciseCard.module.scss
+++ b/src/components/ExerciseCard/ExerciseCard.module.scss
@@ -8,13 +8,19 @@
 
 .head {
   width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .body {
   width: 80%;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
 }
 
-.image {
+.media {
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -26,7 +32,13 @@
   @include viewport(big-mobile) {
     @include truncate-lines(4);
   }
+  @include viewport(tablet) {
+    @include truncate-lines(6);
+  }
+  @include viewport(desktop) {
+    @include truncate-lines(4);
+  }
   @include viewport(desktop-large) {
-    @include truncate-lines(10);
+    @include truncate-lines(6);
   }
 }
