adding Actions to the Exercise cards

--- a/src/components/ExerciseCard/ExerciseCard.module.scss
+++ b/src/components/ExerciseCard/ExerciseCard.module.scss
@@ -20,6 +20,18 @@
   justify-content: center;
 }
 
+.actions {
+  display: flex;
+  justify-content: flex-end;
+
+  .edit {
+    @include iconBtn($color: $black-color);
+  }
+  .view {
+    @include iconBtn($color: $black-color);
+  }
+}
+
 .media {
   width: 100%;
   height: 100%;
