--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -84,6 +84,7 @@
   cursor: pointer;
   transition: background-color .5s ease;
   font-size: 20px;
+  position: relative;
 
   &:hover {
     background-color: $color;
