--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -26,6 +26,7 @@ $desktop-spacing: 12px;
 //Pallet
 $alert-color: #950000;
 $backgound-color: #F5F5F5;
+$backgound-tooltip-color: #00000099;
 $shadow-color: $black-light-color;
 $disable-color: $black-light-color;
 $textfield-background-color: $white-color
