--- a/src/components/Button/LoadingButton/LoadingButton.module.scss
+++ b/src/components/Button/LoadingButton/LoadingButton.module.scss
@@ -4,7 +4,7 @@
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 0.25rem;
-  color: #fff;
+  color: $white-color;
   cursor: pointer;
   transition: background-color 0.3s ease;
   background-color: $blue-color;
