--- a/src/components/ExerciseCard/ExerciseCard.module.scss
+++ b/src/components/ExerciseCard/ExerciseCard.module.scss
@@ -7,17 +7,24 @@
 }
 
 .head {
-  width: 20%;
+  width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  @include viewport(big-mobile) {
+    width: 20%;
+  }
 }
 
 .body {
-  width: 80%;
+  width: 70%;
   flex-direction: column;
   display: flex;
   justify-content: center;
+  @include viewport(big-mobile) {
+    width: 80%;
+  }
 }
 
 .actions {
