--- a/src/components/ExerciseCard/ExerciseCard.module.scss
+++ b/src/components/ExerciseCard/ExerciseCard.module.scss
@@ -7,24 +7,25 @@
 }
 
 .head {
-  width: 30%;
+  width: 32%;
   display: flex;
   justify-content: center;
   align-items: center;
-  
-  @include viewport(big-mobile) {
-    width: 20%;
-  }
+  position: relative;
+}
+
+.link {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
 .body {
-  width: 70%;
+  width: 68%;
   flex-direction: column;
   display: flex;
   justify-content: center;
-  @include viewport(big-mobile) {
-    width: 80%;
-  }
 }
 
 .actions {
@@ -43,6 +44,7 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
+  object-fit: contain;
 }
 
 .description {
