--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,6 +17,7 @@ $white-color: #F2F2F2;
 $red-color: #DC3545;
 $green-color: #28A745;
 $blue-color: #007BFF;
+$grey-color: #6C757D;
 
 //Spacing
 $spacing: 8px;
