resizing CreateExerciseCard icon

--- a/src/components/ExerciseCard/CreateExerciseCard.module.scss
+++ b/src/components/ExerciseCard/CreateExerciseCard.module.scss
@@ -36,4 +36,9 @@
   border-radius: 50%;
   background-color: $grey-color;
   color: $backgound-color;
+
+  @include viewport(tablet) {
+    width: 60px;
+    height: 60px;
+  }
 }
