--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,7 +21,7 @@ body {
 
 body {
   background-color: $backgound-color;
-  position: absolute;
+  position: relative;
 }
 
 textarea, input, button, select { font-family: inherit; font-size: inherit; }
