--- a/src/components/Container/Exercises/Exercises.module.scss
+++ b/src/components/Container/Exercises/Exercises.module.scss
@@ -13,6 +13,26 @@
   
 }
 
+.card {
+  @include card();
+  height: 127px;
+
+  @include viewport(big-mobile) {
+    height: 151px;
+  }
+
+  @include viewport(tablet) {
+    height: 195px;
+  }
+
+  @include viewport(desktop) {
+    height: 155px;
+  }
+  @include viewport(desktop-large) {
+    height: 195px;
+  }
+}
+
 button.addBtn {
   @include iconBtn($blue-color);
   margin: auto 0 10px auto;
