--- a/src/components/Loading/Dots/DotsLoading.module.scss
+++ b/src/components/Loading/Dots/DotsLoading.module.scss
@@ -11,7 +11,7 @@
 .bounce3 {
   width: 30%;
   height: 80%;
-  background-color: $white-color;
+  background-color: $info-light-color;
 
   border-radius: 100%;
   display: inline-block;
