--- a/src/components/Exercise/ExerciseDetail/ExerciseDetail.module.scss
+++ b/src/components/Exercise/ExerciseDetail/ExerciseDetail.module.scss
@@ -15,9 +15,7 @@
 }
 
 .divider {
-  background-color: $black-light-color;
-  height: 100%;
-  box-shadow:  4px 10px 15px 1px $black-light-color;
+  @include verticalDivider();
 }
 
 .media {
