--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -53,10 +53,9 @@
   height: 100%;
   width: 2px;
   background: linear-gradient(180deg, transparent, $black-light-color, transparent);
-  // margin: 0 20px; // space on the left and right of the divider
 
-  box-shadow: 5px 0 5px -2px $grey-color, 
-              -5px 0 5px -2px $grey-color;
+  box-shadow: 5px 0 5px -2px $shadow-color, 
+              -5px 0 5px -2px $shadow-color;
 }
 
 @mixin card($includeSpacing: true, $shadowColor: $shadow-color) {
