--- a/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
+++ b/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
@@ -3,7 +3,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  width: 90vw;
+  // width: 90vw;
   height: 80vh;
   // justify-content: space-evenly;
 }
