Reorganizing Back button and code

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,7 +1,9 @@
 @import 'mixins';
 
-.bodyContent {
-  padding : 0 20px;
+.main {
+  margin-left: 50px;
+  padding: 0 20px;
+
   @include viewport(tablet) {
     padding: 0 100px;
   }
