--- a/src/components/Exercise/ExerciseDetail/ExerciseActions/ExerciseActions.module.scss
+++ b/src/components/Exercise/ExerciseDetail/ExerciseActions/ExerciseActions.module.scss
@@ -2,7 +2,6 @@
 
 .wrapper {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-end;
   @include padding();
 }
