--- a/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
+++ b/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
@@ -3,9 +3,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  // width: 90vw;
   height: 80vh;
-  // justify-content: space-evenly;
 }
 
 .title {
@@ -27,9 +25,8 @@
 }
 
 .exercisePicker {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+  height: 400px;
+  overflow-y: auto; 
 }
 
 .workoutContainer {
