--- a/src/components/Exercise/ExercisePicker/ExercisePicker.module.scss
+++ b/src/components/Exercise/ExercisePicker/ExercisePicker.module.scss
@@ -1,8 +1,14 @@
-.loading {
-  margin: auto;
-}
 
 .label {
   display:flex;
   gap: 10px;
+  margin: 30px 0;
+
+  &:first-child {
+    margin-top: 0;
+  }
+}
+
+.skeleton {
+  height: 30px;
 }
