--- a/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
+++ b/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
@@ -59,3 +59,11 @@
     flex: 1 1 0px;
   }
 }
+
+.submitBtn {
+  width: 50%;
+  align-self: center;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
