--- a/src/components/Workout/WorkoutCard/WorkoutCard.module.scss
+++ b/src/components/Workout/WorkoutCard/WorkoutCard.module.scss
@@ -12,6 +12,7 @@
   flex-direction: column;
   width: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .exercise {
@@ -33,4 +34,19 @@
 .exerciseInfo {
   width: 50%;
   padding-left: 10px;
+}
+
+.seeMore {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(255 255 255 / 25%));
+  backdrop-filter: blur(1.5px); /* Increased blur effect */
+}
+
+.seeMore:hover {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(255 255 255 / 0%));
 }
