--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -14,8 +14,9 @@
 .carouselSlides {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   transition: transform 0.5s ease-out;
+  flex-direction: row;
   width: 100%;
 }
 
