--- a/src/components/Workout/WorkoutCard/WorkoutCard.module.scss
+++ b/src/components/Workout/WorkoutCard/WorkoutCard.module.scss
@@ -20,20 +20,11 @@
   display:flex;
   flex-direction: row;
   border-bottom: 1px solid $black-light-color;
+  justify-content: center;
 
   &:last-child {
     border-bottom: none;
   }
-}
-
-.exerciseName {
-  width: 50%;
-  text-align: right;
-}
-
-.exerciseInfo {
-  width: 50%;
-  padding-left: 10px;
 }
 
 .seeMore {
