style menu, carousel buttons, and previews

--- a/src/components/Container/Menu/Menu.module.scss
+++ b/src/components/Container/Menu/Menu.module.scss
@@ -37,6 +37,7 @@
   transform: translateX(-50%);
   visibility: hidden;
   transition: all 0.4s ease-in-out;
+  margin-left: 10px;
 }
 
 /* Hide the actual checkbox */
