--- a/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
+++ b/src/components/Workout/WorkoutForm/WorkoutForm.module.scss
@@ -42,6 +42,18 @@
   margin-bottom: 16px;
 }
 
+.card {
+  font-size:12px;
+  flex-direction: row;
+  gap: 5px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid $black-light-color;
+  box-shadow: inset 0 -2px 1px rgba(0,0,0,.03);
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 .workoutFields {
   @include gap();
   display: flex;
