--- a/src/components/Button/IconButton/IconButton.module.scss
+++ b/src/components/Button/IconButton/IconButton.module.scss
@@ -7,6 +7,8 @@
   background-color: transparent;
   cursor: pointer;
   position: relative;
+  padding: 0;
+
 
   .tooltip {
     opacity: 0;
@@ -70,5 +72,19 @@
   .iconContainer{
     background-color: $white-color;
     color: $green-color;
+  }
+}
+
+.grey {
+  &:hover:not(:disabled) {
+    .iconContainer{
+      background-color: $grey-color;
+      color: $white-color;
+    }
+  }
+
+  .iconContainer{
+    background-color: $white-color;
+    color: $grey-color;
   }
 }
