--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -79,6 +79,7 @@
   gap: 10px;
   padding: 10px;
   width: 100%;
+  min-height: 45px;
 
   input, textArea {
     background-color: $textfield-background-color;
