--- a/src/components/Container/Menu/Menu.module.scss
+++ b/src/components/Container/Menu/Menu.module.scss
@@ -65,6 +65,10 @@ $z-index-menu-container: $z-index-menu+10;
 .menuContent {
   width: 50px;  // Set initial width to match the collapsed state
   transition: width 0.4s ease-in-out;  // Add transition for width
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* For the expand/collapse icon */
