--- a/src/components/Button/LoadingButton/LoadingButton.module.scss
+++ b/src/components/Button/LoadingButton/LoadingButton.module.scss
@@ -1,7 +1,6 @@
 @import 'mixins';
 
 .button {
-  background-color: $blue-color;
   border-radius: 0.25rem;
   border: none;
   color: $white-color;
@@ -10,10 +9,6 @@
   justify-content: center;
   padding: 0.5rem 1rem;
   transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: darken($blue-color, 20%);
-  }
 
   &:disabled {
     background-color: $disable-color;
@@ -24,6 +19,22 @@
   }
 
   
+}
+
+.blue {
+  background-color: $info-dark-color;
+
+  &:hover {
+    background-color: darken($info-dark-color, 20%);
+  }
+}
+
+.red {
+  background-color: $error-dark-color;
+
+  &:hover {
+    background-color: darken($error-dark-color, 20%);
+  }
 }
 
 .loading {
